creation de la branche Germain

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <p>Artiste, globe trotter en reconversion professionnelle, je me consacre corps et âme au développement web. J'ai abordé les languages HTML5 et CSS3 sur Codecademy avant d'intégrer la formation développer web et mobile d'IT-Akademy. J'y étudie alors ces deux languages à un niveau supérieur et y découvre le bash, javascript, jQuery, AJAX, PhP, GIT, mySQL, UX, responsive, mobile first.</p>
         </div>
         <div class="half-size min-size-s flex-container">
-          <img class="image-size image-rounded" src="graphic/codehtml.jpg" alt="Une image">
+          <img class="image-size image-rounded" src="graphic/hachiko.jpg" alt="Une image">
         </div>
       </section>
 
