une journee de boulot dessus

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="fr_FR">
 <head>
   <meta charset="utf-8">
-  <title>portfolio</title>
+  <title>Germain Pinganaud</title>
   <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="graphic/letter-g.png">
 </head>
 <body>
   <header>
@@ -14,7 +15,7 @@
     </header>
     <main>
 
-      <section class="flex-container flex-wrap container-margin">
+      <section class="flex-container flex-wrap container-margin big-section">
         <div class="half-size min-size-s flex-container">
           <img class="image-size image-rounded" src="graphic/profil-bw-sm.jpg" alt="Une image">
         </div>
@@ -24,7 +25,7 @@
         </div>
       </section>
 
-      <section class="flex-container flex-wrap-reverse container-margin">
+      <section class="flex-container flex-wrap-reverse container-margin big-section">
         <div class="half-size">
           <h2 class"black-font">&lt;!--Le code, une nouvelle passion--></h2>
           <p>Artiste, globe trotter en reconversion professionnelle, je me consacre corps et âme au développement web. J'ai abordé les languages HTML5 et CSS3 sur Codecademy avant d'intégrer la formation développer web et mobile d'IT-Akademy. J'y étudie alors ces deux languages à un niveau supérieur et y découvre le bash, javascript, jQuery, AJAX, PhP, GIT, mySQL, UX, responsive, mobile first.</p>
@@ -34,27 +35,85 @@
         </div>
       </section>
 
-      <section class="flex-container flex-wrap container-margin white-bg padding-sm">
-        <div class="half-size">
-          <h2 class="black-font">Je travaille sur Mac, Windows et Linux.</h2>
+      <section class="white-bg align-items">
+        <div class="flex-container flex-wrap container-margin half-height">
+          <div class="half-size">
+            <h2 class="black-font">Je travaille sur Mac, Windows et Linux.</h2>
+          </div>
+          <div class="flex-container half-size">
+            <div>
+              <img class="logo-100" src="graphic/maclogo.png" alt="Maccintosh">
+            </div>
+            <div>
+              <img class="logo-100" src="graphic/windows.png" alt="Windows">
+            </div>
+            <div>
+              <img class="logo-100" src="graphic/linux.png" alt="Linux">
+            </div>
+          </div>
         </div>
-        <div class="flex-container half-size">
+        <div class="flex-container flex-wrap half-height">
           <div>
-            <img class="logo-size" src="graphic/maclogo.png" alt="Une image">
+            <img class="logo-100" src="graphic/html.png" alt="html">
           </div>
           <div>
-            <img class="logo-size" src="graphic/windows.png" alt="Une image">
+            <img class="logo-100" src="graphic/css.png" alt="css">
           </div>
           <div>
-            <img class="logo-size" src="graphic/linux.png" alt="Une image">
+            <img class="logo-100" src="graphic/javascript.png" alt="javascript">
+          </div>
+          <div>
+            <img class="logo-100" src="graphic/bootstrap.png" alt="bootstrap">
+          </div>
+          <div>
+            <img class="logo-100" src="graphic/git-redlogo.png" alt="git">
+          </div>
+          <div>
+            <img class="logo-100" src="graphic/github.png" alt="github">
+          </div>
+          <div>
+            <img class="logo-150" src="graphic/php.png" alt="php">
           </div>
         </div>
       </section>
     </main>
     <footer >
-      <ul><li>+(33) 6 48 33 44 17</li>
-        <li>germain.pinganaud@gmail.com</li>
-      </ul></li>
+      <section>
+        <div class="flex-container flex-wrap half-height">
+          <div>
+            <img class="logo-lang" src="graphic/france.png" alt="html">
+          </div>
+          <div>
+            <img class="logo-lang" src="graphic/english.png" alt="html">
+          </div>
+          <div>
+            <img class="logo-lang" src="graphic/japan.png" alt="html">
+          </div>
+          <div>
+            <img class="logo-lang" src="graphic/china.png" alt="html">
+          </div>
+          <h2>Je parle couramment anglais, japonais et j'ai des bases de chinois mandarin.</h2>
+        </div>
+        <div class="flex-container flex-wrap container-margin half-height">
+          <div class="flex-container half-size">
+            <div>
+              <a href="https://www.linkedin.com/in/germain-pinganaud-610445115/" target="_blank">
+                <img class="logo-50" src="graphic/inlogo.png" alt="LinkedIn">
+              </a>
+            </div>
+            <div>
+              <a href="https://www.facebook.com/john.spartaksound" target="_blank">
+                <img class="logo-50" src="graphic/fblogo.png" alt="Facebook">
+              </a>
+            </div>
+            <div>
+              <a href="mailto:contact@germainpinganaud.fr">
+                <img class="logo-50" src="graphic/maillogo.png" alt="Mail">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </ul>
     <small>Copyright 2017 Germain Pinganaud</small>
   </footer>
