--- a/pages/profilen.html
+++ b/pages/profilen.html
@@ -4,7 +4,7 @@
   </div>
   <div class="half-size">
     <h2>My background</h2>
-    <p>I am 33 years old, I like music, asian cultures and code. I studied commercial design in Paris for one year, and decorative arts in Avignon for another year. I went to Bournemouth when I was 19, I worked as a dishwasher in a family hotel for two years., I've learned english and the sense of responsabilities. From 2007 to 2011, I worked in a restaurant in Tokyo to pay my studies in a private school. Back to France ,I'm giving evening courses of japanese and I discovered I wanted to become a web developer.</p>
+    <p>I am 33 years old, I like music, asian cultures and coding. I studied commercial design in Paris for one year, and decorative arts in Avignon for another year. I went to Bournemouth when I was 19, I worked as a dishwasher in a family hotel for two years., I've learned english and the sense of responsabilities. From 2007 to 2011, I worked in a restaurant in Tokyo to pay my studies in a private school. Back to France ,I'm giving evening courses of japanese and I discovered I wanted to become a web developer.</p>
   </div>
 </section>
 
